--- a/styles/styles.css
+++ b/styles/styles.css
@@ -69,7 +69,7 @@ main {
 }
 
 .person-blog-title,
-.web-mission-title {
+.my-goals-title {
     font-weight: 700;
     font-size: 40px;
     line-height: 47px;
@@ -77,7 +77,7 @@ main {
 }
 
 .person-blog-description,
-.mission-description {
+.goals-description {
     font-weight: 400;
     font-size: 16px;
     line-height: 26px;
@@ -97,6 +97,38 @@ ul li {
 .fa-check {
     color:
         #16D887;
+}
+
+/* my goals info section  style */
+.my-goals {
+    margin-top: 140px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.goals-btn {
+    width: 170.11px;
+    height: 64px;
+    background: #005FAC;
+    border-radius: 8px;
+    font-weight: 600;
+    font-size: 20px;
+    color: white;
+    border: none;
+    margin-top: 20px;
+    text-align: center;
+}
+
+.my-goals-img {
+    margin-left: 40px;
+    padding-left: 30px;
+    background: none;
+}
+
+.my-goals-img img {
+    width: 500px;
+    border-radius: 10px;
 }
 
 /* plans section style */
